@@ -1,5 +1,10 @@
 2008-02-17  Jaap Haitsma  <jaap@haitsma.org>
 
+	* src/netspeed.c: (showinfo_cb), (netspeed_applet_factory):
+	Some indentation fixes
+
+2008-02-17  Jaap Haitsma  <jaap@haitsma.org>
+
 	* configure.in:
 	* src/netspeed.c: (open_uri), (display_help), (handle_links):
 	Remove dependency on libgnomeui
